# simon

./: .flake8  README.md  pyproject.toml
.github/workflows/: ci.yml
simon/: errors.py  grammar.py  lexer.py  node.py  utils.py
tests/: test_lexer.py  test_simon.py
